PL> Change Color theme
PL> Change Color theme

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -14,31 +14,30 @@
   --color-grey__0: #9D9EA8;
   --color-grey__1: #62636A;
   --color-grey__2: #53545B;
-  --color-grey__3: #343539;
-  --color-grey__4: #28292D;
+  --color-grey__3: #30343F;
+  --color-grey__4: #24292b;
   --color-grey__5: #1B1D24;
   --color-grey__6: #161A1D;
-  //Accent Color : Red 
-  --color-red__4: #160200;
-  --color-red__3: #250902;
-  --color-red__2: #38040E;
-  --color-red__1: #660708;
-  --color-red__0: #800E13;
-  --color-red__-1: #970e12;
-  --color-red__-2: #A4161A;
-  --color-red__-3: #AD2831;
-  --color-red__-4: #CC444B;
-  --color-red__-5: #DA5552;
-  --color-red__-6: #DF7373;
-  --color-red__-7: #E39695;
-  --color-red__-8: #E4B1AB;
-  // Accent Color : Green
-  --color-green__3: #37f2b8;
-  --color-green__2: #1ceaaa;
-  --color-green__1: #12d99c;
-  --color-green__0: #0ACB91;
-  --color-green__-1: #01956b;
-  --color-green__-2: #027d57;
+  // Primary Color : Pink
+  --color-pink-grey--1: #D5D3CB;
+  --color-pink-grey-0: #76717C;
+  --color-pink--2: #FCDCE0;
+  --color-pink--1: #FCBED2;
+  --color-pink-0: #EEA6C4;
+  --color-pink-1: #EA638C;
+  --color-pink-2: #89023E;
+  // Accent Color: Purple
+  --color-Brown--2: #EBE0F5;
+  --color-Brown--1: #CBA9EF;
+  --color-Brown-0: #A06EC4;
+  --color-Brown-1: #8D51B8;
+  --color-Brown-2: #623582;
+  // Accent Color : Blue
+  --color-blue--2: #64DFDF;
+  --color-blue--1: #56CFE1;
+  --color-blue--0: #48BFE3;
+  --color-blue-1: #1E9CC2;
+  --color-blue-2: #19809F;
   // Secondary Color : Mud color
   --color-shadow__-2: #F5F3F4;
   --color-shadow__-1: #D3D3D3;
