PL> Add basic color scheme tot the project
PL> Add basic color scheme tot the project

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -44,7 +44,41 @@ a {
 }
 
 ::selection {
-  background-color: var( --color-red__-4);
-  color: var(--color-grey__-4);
+  background-color: var(--color-pink-2);
+  color: var(--color-white);
 }
 
+li {
+  list-style: none;
+}
+
+h1 {
+  font-size: 8rem;
+  letter-spacing: 4px;
+}
+
+h2 {
+  font-size: 6rem;
+  letter-spacing: 2px;
+}
+
+h3 {
+  font-size: 4rem;
+  letter-spacing: 2px;
+}
+
+h4 {
+  font-size: 2rem;
+}
+
+h5, p {
+  font-size: 1.6rem;
+}
+
+h6 {
+  font-size: 1.2rem;
+}
+
+p {
+  line-height: 1.5;
+}
