--- a/css/style.css
+++ b/css/style.css
@@ -111,10 +111,18 @@ p {
   src: local("Vogue"), url("../res/fonts/Vogue.woff") format("woff"); }
 
 .heading-text {
-  font-family: 'Vogue', sans-serif !important; }
+  font-family: 'Vogue', sans-serif !important;
+  font-weight: lighter; }
 
 .paragraph-text {
-  font-family: 'Oxygen', sans-serif !important; }
+  font-family: 'Oxygen', sans-serif !important;
+  font-weight: normal; }
+
+h1, h2, h3 {
+  font-weight: lighter; }
+
+h4, h5, h6 {
+  font-weight: normal; }
 
 h1, h2, h3, h4 {
   font-family: 'Vogue', sans-serif; }
