--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,10 +7,19 @@
 
 .heading-text {
   font-family: 'Vogue', sans-serif !important;
+  font-weight: lighter;
 }
 
 .paragraph-text {
   font-family: 'Oxygen', sans-serif !important;
+  font-weight: normal;
+}
+
+h1, h2, h3 {
+  font-weight: lighter;
+}
+h4,h5,h6{
+  font-weight: normal;
 }
 
 h1, h2, h3, h4 {
