PL> Create styling files for components
PL> Create styling files for components

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,8 @@
   box-sizing: inherit; }
 
 :root {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  box-sizing: border-box; }
   @media only screen and (min-width: 112.5em) {
     :root {
       font-size: 70%; } }
@@ -63,7 +64,6 @@
       font-size: 50%; } }
 
 body {
-  box-sizing: border-box;
   padding: 3rem;
   font-family: 'Raleway', sans-serif; }
   @media only screen and (max-width: 56.25em) {
