--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,4 +7,13 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "layouts/footer";
+@import "layouts/header";
+@import "layouts/sidebar";
+
+@import "components/gallery";
+@import "components/homes";
+@import "components/realtors";
+@import "components/story";
+
 
