PL> Update colors
PL> Update colors

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -19,8 +19,10 @@
   --color-grey__5: #1B1D24;
   --color-grey__6: #161A1D;
   // Primary Color : Pink
-  --color-pink-grey--1: #D5D3CB;
-  --color-pink-grey-0: #76717C;
+  --color-pink-grey--2: #dcced4;
+  --color-pink-grey--1: #b6aaad;
+  --color-pink-grey-0: #8e7d83;
+  --color-pink-grey-1: #50484b;
   --color-pink--2: #FCDCE0;
   --color-pink--1: #FCBED2;
   --color-pink-0: #EEA6C4;
