--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -20,8 +20,10 @@
   --color-grey__4: #24292b;
   --color-grey__5: #1B1D24;
   --color-grey__6: #161A1D;
-  --color-pink-grey--1: #D5D3CB;
-  --color-pink-grey-0: #76717C;
+  --color-pink-grey--2: #dcced4;
+  --color-pink-grey--1: #b6aaad;
+  --color-pink-grey-0: #8e7d83;
+  --color-pink-grey-1: #50484b;
   --color-pink--2: #FCDCE0;
   --color-pink--1: #FCBED2;
   --color-pink-0: #EEA6C4;
@@ -41,59 +43,413 @@
   --color-shadow__-1: #D3D3D3;
   --color-shadow__0: #B1A7A6;
   --color-shadow__1: #8A817C;
-  --color-shadow__2: #463F3A; }
+  --color-shadow__2: #463F3A;
+}
 
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 :root {
-  font-size: 62.5%; }
-  @media only screen and (min-width: 112.5em) {
-    :root {
-      font-size: 70%; } }
-  @media only screen and (max-width: 75em) {
-    :root {
-      font-size: 56.25%; } }
-  @media only screen and (max-width: 56.25em) {
-    :root {
-      font-size: 50%; } }
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+@media only screen and (min-width: 112.5em) {
+  :root {
+    font-size: 70%;
+  }
+}
+@media only screen and (max-width: 75em) {
+  :root {
+    font-size: 56.25%;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  :root {
+    font-size: 50%;
+  }
+}
 
 body {
-  box-sizing: border-box;
   padding: 3rem;
-  font-family: 'Raleway', sans-serif; }
-  @media only screen and (max-width: 56.25em) {
-    body {
-      padding: 0; } }
+  font-family: "Oxygen", sans-serif;
+  background-color: var(--color-white);
+}
+@media only screen and (max-width: 56.25em) {
+  body {
+    padding: 0;
+  }
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 ::selection {
-  background-color: var(--color-red__-4);
-  color: var(--color-grey__-4); }
+  background-color: var(--color-pink-2);
+  color: var(--color-white);
+}
+
+li {
+  list-style: none;
+}
+
+h1 {
+  font-size: 8rem;
+  letter-spacing: 4px;
+  font-weight: lighter;
+}
+
+h2 {
+  font-size: 6rem;
+  letter-spacing: 2px;
+  font-weight: lighter;
+}
+
+h3 {
+  font-size: 4rem;
+  letter-spacing: 2px;
+  font-weight: lighter;
+}
+
+h4 {
+  font-size: 2rem;
+  font-weight: lighter;
+}
+
+h5, p {
+  font-size: 1.6rem;
+  font-weight: lighter;
+}
+
+h6 {
+  font-size: 1.2rem;
+  font-weight: lighter;
+}
+
+p {
+  line-height: 1.5;
+  font-weight: lighter;
+}
 
 @font-face {
-  font-family: 'Vogue';
+  font-family: "Vogue";
   font-style: normal;
   font-weight: normal;
-  src: local("Vogue"), url("../res/fonts/Vogue.woff") format("woff"); }
-
+  src: local("Vogue"), url("../res/fonts/Vogue.woff") format("woff");
+}
 .heading-text {
-  font-family: 'Vogue', sans-serif !important; }
+  font-family: "Vogue", sans-serif !important;
+  font-weight: lighter;
+}
 
 .paragraph-text {
-  font-family: 'Oxygen', sans-serif !important; }
+  font-family: "Oxygen", sans-serif !important;
+  font-weight: normal;
+}
+
+h1, h2, h3 {
+  font-weight: lighter;
+}
+
+h4, h5, h6 {
+  font-weight: normal;
+}
 
 h1, h2, h3, h4 {
-  font-family: 'Vogue', sans-serif; }
+  font-family: "Vogue", sans-serif;
+}
 
 h5, h6, p {
-  font-family: 'Oxygen', sans-serif; }
+  font-family: "Oxygen", sans-serif;
+}
 
 body {
-  font-family: 'Oxygen', sans-serif; }
+  font-family: "Oxygen", sans-serif;
+}
+
+.text-color-black {
+  color: var(--color-black) !important;
+}
+
+.text-color-white {
+  color: var(--color-white) !important;
+}
+
+.text-color-grey__-4 {
+  color: var(--color-grey__-4) !important;
+}
+
+.text-color-grey__-3 {
+  color: var(--color-grey__-3) !important;
+}
+
+.text-color-grey__-2 {
+  color: var(--color-grey__-2) !important;
+}
+
+.text-color-grey__-1 {
+  color: var(--color-grey__-1) !important;
+}
+
+.text-color-grey__0 {
+  color: var(--color-grey__0) !important;
+}
+
+.text-color-grey__1 {
+  color: var(--color-grey__1) !important;
+}
+
+.text-color-grey__2 {
+  color: var(--color-grey__2) !important;
+}
+
+.text-color-grey__3 {
+  color: var(--color-grey__3) !important;
+}
+
+.text-color-grey__4 {
+  color: var(--color-grey__4) !important;
+}
+
+.text-color-grey__5 {
+  color: var(--color-grey__5) !important;
+}
+
+.text-color-grey__6 {
+  color: var(--color-grey__6) !important;
+}
+
+.text-color-pink-grey--1 {
+  color: var(--color-pink-grey--1) !important;
+}
+
+.text-color-pink-grey-0 {
+  color: var(--color-pink-grey-0) !important;
+}
+
+.text-color-pink--2 {
+  color: var(--color-pink--2) !important;
+}
+
+.text-color-pink--1 {
+  color: var(--color-pink--1) !important;
+}
+
+.text-color-pink-0 {
+  color: var(--color-pink-0) !important;
+}
+
+.text-color-pink-1 {
+  color: var(--color-pink-1) !important;
+}
+
+.text-color-pink-2 {
+  color: var(--color-pink-2) !important;
+}
+
+.text-color-Brown--2 {
+  color: var(--color-Brown--2) !important;
+}
+
+.text-color-Brown--1 {
+  color: var(--color-Brown--1) !important;
+}
+
+.text-color-Brown-0 {
+  color: var(--color-Brown-0) !important;
+}
+
+.text-color-Brown-1 {
+  color: var(--color-Brown-1) !important;
+}
+
+.text-color-Brown-2 {
+  color: var(--color-Brown-2) !important;
+}
+
+.text-color-blue--2 {
+  color: var(--color-blue--2) !important;
+}
+
+.text-color-blue--1 {
+  color: var(--color-blue--1) !important;
+}
+
+.text-color-blue--0 {
+  color: var(--color-blue--0) !important;
+}
+
+.text-color-blue-1 {
+  color: var(--color-blue-1) !important;
+}
+
+.text-color-blue-2 {
+  color: var(--color-blue-2) !important;
+}
+
+.text-color-shadow_color_-2 {
+  color: var(--color-shadow__-2) !important;
+}
+
+.text-color-shadow_color_-1 {
+  color: var(--color-shadow__-1) !important;
+}
+
+.text-color-shadow__0 {
+  color: var(--color-shadow__0) !important;
+}
+
+.text-color-shadow__1 {
+  color: var(--color-shadow__1) !important;
+}
+
+.text-color-shadow__2 {
+  color: var(--color-shadow__2) !important;
+}
+
+.bg-color-black {
+  background-color: var(--color-black) !important;
+}
+
+.bg-color-white {
+  background-color: var(--color-white) !important;
+}
+
+.bg-color-grey__-4 {
+  background-color: var(--color-grey__-4) !important;
+}
+
+.bg-color-grey__-3 {
+  background-color: var(--color-grey__-3) !important;
+}
+
+.bg-color-grey__-2 {
+  background-color: var(--color-grey__-2) !important;
+}
+
+.bg-color-grey__-1 {
+  background-color: var(--color-grey__-1) !important;
+}
+
+.bg-color-grey__0 {
+  background-color: var(--color-grey__0) !important;
+}
+
+.bg-color-grey__1 {
+  background-color: var(--color-grey__1) !important;
+}
+
+.bg-color-grey__2 {
+  background-color: var(--color-grey__2) !important;
+}
+
+.bg-color-grey__3 {
+  background-color: var(--color-grey__3) !important;
+}
+
+.bg-color-grey__4 {
+  background-color: var(--color-grey__4) !important;
+}
+
+.bg-color-grey__5 {
+  background-color: var(--color-grey__5) !important;
+}
+
+.bg-color-grey__6 {
+  background-color: var(--color-grey__6) !important;
+}
+
+.bg-color-pink-grey--1 {
+  background-color: var(--color-pink-grey--1) !important;
+}
+
+.bg-color-pink-grey-0 {
+  background-color: var(--color-pink-grey-0) !important;
+}
+
+.bg-color-pink--2 {
+  background-color: var(--color-pink--2) !important;
+}
+
+.bg-color-pink--1 {
+  background-color: var(--color-pink--1) !important;
+}
+
+.bg-color-pink-0 {
+  background-color: var(--color-pink-0) !important;
+}
+
+.bg-color-pink-1 {
+  background-color: var(--color-pink-1) !important;
+}
+
+.bg-color-pink-2 {
+  background-color: var(--color-pink-2) !important;
+}
+
+.bg-color-Brown--2 {
+  background-color: var(--color-Brown--2) !important;
+}
+
+.bg-color-Brown--1 {
+  background-color: var(--color-Brown--1) !important;
+}
+
+.bg-color-Brown-0 {
+  background-color: var(--color-Brown-0) !important;
+}
+
+.bg-color-Brown-1 {
+  background-color: var(--color-Brown-1) !important;
+}
+
+.bg-color-Brown-2 {
+  background-color: var(--color-Brown-2) !important;
+}
+
+.bg-color-blue--2 {
+  background-color: var(--color-blue--2) !important;
+}
+
+.bg-color-blue--1 {
+  background-color: var(--color-blue--1) !important;
+}
+
+.bg-color-blue--0 {
+  background-color: var(--color-blue--0) !important;
+}
+
+.bg-color-blue-1 {
+  background-color: var(--color-blue-1) !important;
+}
+
+.bg-color-blue-2 {
+  color: var(--color-blue-2) !important;
+}
+
+.bg-color-shadow_color_-2 {
+  background-color: var(--color-shadow__-2) !important;
+}
+
+.bg-color-shadow_color_-1 {
+  background-color: var(--color-shadow__-1) !important;
+}
+
+.bg-color-shadow__0 {
+  background-color: var(--color-shadow__0) !important;
+}
+
+.bg-color-shadow__1 {
+  background-color: var(--color-shadow__1) !important;
+}
+
+.bg-color-shadow__2 {
+  background-color: var(--color-shadow__2) !important;
+}
+
+/*# sourceMappingURL=style.comp.css.map */
