--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,16 @@
 
 @import "components/gallery";
 @import "components/homes";
-@import "components/realtors";
+@import "components/dermatologists";
+@import "components/carousel";
 @import "components/story";
-
+@import "components/banner";
+@import "components/mobile-app";
+@import "components/top-categories";
+@import "components/real-deals";
+@import "components/best-sellers";
+@import "components/our-favourites";
+@import "components/reviews";
+@import "components/button";
+@import "components/card";
 
