--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,10 +12,7 @@
 @import "layouts/sidebar";
 
 @import "components/gallery";
-@import "components/homes";
 @import "components/dermatologists";
-@import "components/carousel";
-@import "components/story";
 @import "components/banner";
 @import "components/mobile-app";
 @import "components/top-categories";
@@ -25,4 +22,6 @@
 @import "components/reviews";
 @import "components/button";
 @import "components/card";
+@import "components/features";
 @import "vendors/slick";
+
