--- a/sass/components/_reviews.scss
+++ b/sass/components/_reviews.scss
@@ -1,3 +1,7 @@
+.reviews-container{
+  grid-column: full-start/full-end;
+}
+
 .reviews {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -30,5 +34,10 @@
     &__story {
       background-color: transparent;
     }
+  }
+}
+@include respond(tab-land){
+  .reviews-container{
+    width: calc(100vw - 8rem);
   }
 }
