--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,8 +1,9 @@
 .header {
   background-color: var(--color-pink-2);
+  grid-column: full-start/full-end;
   display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100vh;
+  grid-template-columns: 2fr 1fr;
 
   &__picture {
     background-color: var(--color-pink--1);
@@ -17,9 +18,9 @@
 
 @include respond(tab-land) {
   .header {
-    grid-template-rows: 100vh;
-    grid-template-columns: 100vw;
-
+    grid-template-rows: 50vh 50vh;
+    grid-template-columns: 1fr;
+    width: calc(100vw - 8rem);
     &__picture {
       background-color: var(--color-pink--1);
       color: var(--color-grey__4);
@@ -30,9 +31,9 @@
     &__content {
       background-color: transparent;
       color: var(--color-black);
-      grid-row: 1/2;
-      grid-column: 1/2;
+      grid-row: 2/3;
       z-index: 1;
+      grid-column: 1/2;
     }
   }
 }
